# MOEX_Hackathon_trade_robots_examples

VeryBigSad-moex-hack-main/backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
VeryBigSad-moex-hack-main/backend/app/: .env.example  main.py  settings.py  setup.py
VeryBigSad-moex-hack-main/backend/app/api/: __init__.py
VeryBigSad-moex-hack-main/backend/app/config/: constants.py  settings.py
VeryBigSad-moex-hack-main/backend/app/core/: exceptions.py
algotrade-master/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
algotrade-master/airflow/: Dockerfile  entrypoint_airflow.sh  requirements.txt
algotrade-master/airflow/config/: airflow.cfg
algotrade-master/airflow/dags/: dag_analyze.py  dag_candle_grubber.py  dag_dump_psql.py  dag_obstat_grubber.py  dag_orderstat_grubber.py  dag_ticker_grubber.py  dag_tradestat_grubber.py
algotrade-master/airflow/src/: schema.py
algotrade-master/airflow/src/core/: config.py
algotrade-master/airflow/src/extract/: base.py  candle.py  clickhouse.py  obstat.py  orderstat.py  postgres.py  ticker.py  tradestat.py
algotrade-master/backend/clickhouse_initer/: Dockerfile  requirements.txt
algotrade-master/backend/invest_panel/: Dockerfile  requirements.txt  start.sh
algotrade-master/backend/pg_initer/: Dockerfile  requirements.txt  schema.sql
algotrade-master/clickhouse/: keeper.Dockerfile  node.Dockerfile
algotrade-master/clickhouse/server_config/: config.xml  dictionary.xml  enable_keeper.xml  metrika.xml  users.xml
algotrade-master/nginx/: nginx.conf
algotrade-master/nginx/configs/: main.conf
algotrade-master/notebooks/: Dockerfile  requirements.txt
algotrade-master/notebooks/config/: jupyter_notebook_config.py
algotrade-master/notebooks/work/: data-analysis.ipynb  pyspark.ipynb
algotrade-master/spark/: Dockerfile  requirements.txt
moex-trading-master/: .gitignore  Cargo.toml  README.md
moex-trading-master/algopack_data/: tradestats_MOEX 1 short.csv
moex-trading-master/src/: lib.rs  main.rs
moex-trading-master/src/tester/: trading_system_tester.rs
moex-trading-master/src/trading_systems/: test_system.rs
moex-trading-master/src/traits/: trade.rs
(+1580 files in other folders)
