[tool.poetry]
name = "algotrade"
version = "0.1.0"
description = ""
authors = ["xh4vm <h4vm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
backoff = "^2.2.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.2"
moexalgo = "^1.0.1"
pandas = "^2.1.3"
pendulum = "^2.1.2"
loguru = "^0.7.2"
sh = "^2.0.6"
clickhouse-driver = "^0.2.6"
psycopg2-binary = "^2.9.9"
orjson = "^3.9.10"
redis = "^5.0.1"
notebook = "^7.0.6"
apache-airflow-providers-apache-spark = "^4.4.0"
pyspark = "^3.5.0"
motor = "^3.3.2"
fastapi = "^0.104.1"
starlette-context = "^0.3.6"
dependency-injector = "^4.41.0"
statsforecast = "^1.6.0"
scikit-learn = "^1.3.2"
imbalanced-learn = "^0.11.0"
arch = "^6.2.0"
numpy = "^1.26.2"
xgboost = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
