[package]
name = "moex-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "rt"] }
chrono = "0.4"
linked-hash-map = "0.5"

[lib]
#name = "moex-trading"
path = "src/lib.rs"